--- a/page.css
+++ b/page.css
@@ -4,6 +4,8 @@
   grid-gap: 10px;
 }
 .title{
-  grid-column: 2/3;
-  grid-row: 1/3;
+ grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 1;
 }
