--- a/page.css
+++ b/page.css
@@ -4,8 +4,5 @@
   grid-gap: 10px;
 }
 .title{
- grid-column-start: 1;
-        grid-column-end: 3;
-        grid-row-start: 1;
-        grid-row-end: 1;
+grid-column: 1 / span 2;
 }
