--- a/page.css
+++ b/page.css
@@ -1,8 +1,10 @@
+head
+body
+{background-color:#c3d7f7}
 .wrapper{
   display:grid;
   grid-template-columns: 33% 33% 33%;
   grid-gap: 10px;
-  background-color:#c3d7f7;
 }
 .title{
 grid-column: 1 / span 2;
