--- a/page.css
+++ b/page.css
@@ -1,6 +1,4 @@
-head
-body
-{background-color:#c3d7f7}
+body{background-color:#c3d7f7}
 .wrapper{
   display:grid;
   grid-template-columns: 33% 33% 33%;
